<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailCryptocurrencyActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarDetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/title_detail_cryptocurrency"
        app:titleCentered="true" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="40dp"
        android:backgroundTint="#372196F3"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarDetail">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgCryptoCurrencies"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/ic_ripple"
                    android:contentDescription="@string/content_description_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTxtNameCryptocurrency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:text="@string/lbl_crypto"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tvTxtNameBook"
                    app:layout_constraintEnd_toStartOf="@id/tvNameCryptocurrency"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgCryptoCurrencies" />

                <TextView
                    android:id="@+id/tvNameCryptocurrency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="8dp"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/tvNameBook"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvTxtNameCryptocurrency"
                    app:layout_constraintTop_toBottomOf="@id/imgCryptoCurrencies" />

                <TextView
                    android:id="@+id/tvTxtNameBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:text="@string/lbl_name_book"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tvTxtVolume"
                    app:layout_constraintEnd_toStartOf="@id/tvNameBook"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTxtNameCryptocurrency" />

                <TextView
                    android:id="@+id/tvNameBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/tvVolume"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvTxtNameBook"
                    app:layout_constraintTop_toBottomOf="@id/tvNameCryptocurrency" />

                <TextView
                    android:id="@+id/tvTxtVolume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:text="@string/lbl_volume"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tvHigh"
                    app:layout_constraintEnd_toStartOf="@id/tvVolume"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTxtNameBook" />

                <TextView
                    android:id="@+id/tvVolume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/tvTxtHigh"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvTxtVolume"
                    app:layout_constraintTop_toBottomOf="@id/tvNameBook" />

                <TextView
                    android:id="@+id/tvTxtHigh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:text="@string/lbl_high"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tvTxtCreatedAt"
                    app:layout_constraintEnd_toStartOf="@id/tvHigh"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTxtVolume" />

                <TextView
                    android:id="@+id/tvHigh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/tvCreatedAt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvTxtHigh"
                    app:layout_constraintTop_toBottomOf="@id/tvVolume" />

                <TextView
                    android:id="@+id/tvTxtCreatedAt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="33dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:text="@string/lbl_created_at"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/tvCreatedAt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTxtHigh" />

                <TextView
                    android:id="@+id/tvCreatedAt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="33dp"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvTxtCreatedAt"
                    app:layout_constraintTop_toBottomOf="@id/tvHigh" />

                <TextView
                    android:id="@+id/tvTxtAsks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="33dp"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:text="@string/lbl_asks"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTxtCreatedAt" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAsks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTxtAsks" />

                <TextView
                    android:id="@+id/tvTxtBids"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="33dp"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:text="@string/lbl_bids"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvAsks" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvBids"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTxtBids" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </com.google.android.material.card.MaterialCardView>

    <include
        android:id="@+id/containerProgressBar"
        layout="@layout/layout_progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>